--- a/20_FINAL_EVALUATION_CVS.ipynb
+++ b/20_FINAL_EVALUATION_CVS.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "\"https://medium.com/towards-data-science/mean-average-precision-at-k-map-k-clearly-explained-538d8e032d2\"\n",
+    "#https://medium.com/towards-data-science/mean-average-precision-at-k-map-k-clearly-explained-538d8e032d2\n",
     "def apk(y_true, y_pred, k_max=0):\n",
     "  # Check if all elements in lists are unique\n",
     "  if len(set(y_true)) != len(y_true):\n",
