--- a/B - Parsing EURES Job Advertisements/4_EURES_Creation_Testset.ipynb
+++ b/B - Parsing EURES Job Advertisements/4_EURES_Creation_Testset.ipynb
@@ -14,12 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import * \n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support.wait import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from _helpers_parsing import driver_setup\n",
-    "from concurrent.futures import ThreadPoolExecutor"
+    "import sys\n",
+    "sys.path.append('..') \n",
+    "from _utils import load_json, flatten_list # Adjust path to import from parent directory"
    ]
   },
   {
@@ -28,16 +25,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import time\n",
-    "from bs4 import BeautifulSoup\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
+    "from tqdm import tqdm\n",
     "import random\n",
-    "from collections import Counter\n",
-    "import os\n",
-    "tqdm.pandas()\n",
-    "random.seed(42)"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from _helpers_parsing import extend_jobs"
    ]
   },
   {
@@ -46,93 +45,6 @@
    "metadata": {},
    "source": [
     "# Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_jobdescription_eres(ads, driver, filename):\n",
-    "    results = []\n",
-    "    dead_links = []\n",
-    "    #ads = [ad for ad in ads if ad[\"url\"] not in urls_parsed]\n",
-    "    for ad in tqdm(ads):\n",
-    "        driver.get(ad[\"url\"]+\"?jvDisplayLanguage=de&lang=de\")\n",
-    "        try:\n",
-    "            WebDriverWait(driver,2).until(EC.presence_of_element_located((By.ID, \"error-message-jv-detail\")))\n",
-    "            dead_links.append(ad)\n",
-    "            with open(filename+\"_deadlinks\", 'w',encoding= \"utf-8\") as fp:\n",
-    "                json.dump(dead_links, fp, indent = 2, ensure_ascii=False)\n",
-    "            continue\n",
-    "        except:\n",
-    "            pass\n",
-    "        try:\n",
-    "            WebDriverWait(driver, 8).until(EC.presence_of_element_located((By.ID, \"jv-details-job-description\")))\n",
-    "            WebDriverWait(driver, 8).until(EC.presence_of_element_located((By.ID, \"jv-job-categories-codes\")))\n",
-    "            time.sleep(0.5)\n",
-    "            soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
-    "        except:\n",
-    "            continue\n",
-    "\n",
-    "        try:\n",
-    "            jobtitle = soup.find(\"h1\").text\n",
-    "        except:\n",
-    "            jobtitle = None\n",
-    "        try:\n",
-    "            desc_content = (soup.find(id=\"jv-details-job-description\").contents)\n",
-    "            description = \"\"\n",
-    "            for i in range(len(desc_content)):\n",
-    "                if desc_content[i].text != \"\":\n",
-    "                    description += desc_content[i].text.replace(\"\\xa0\",\"\")\n",
-    "                if i+1 < len(desc_content):\n",
-    "                    if str(desc_content[i]) == \"<br/>\" and str(desc_content[i+1]) == \"<br/>\":\n",
-    "                        description+= \" \\n \"\n",
-    "        except:\n",
-    "            description = None\n",
-    "        # try:\n",
-    "        #     reqs = soup.find(id=\"jv-details-job-requirements-section\").text\n",
-    "        # except:\n",
-    "        #     reqs = None\n",
-    "        #try:\n",
-    "        jobs_esco_container = soup.find(id=\"jv-job-categories-codes\")\n",
-    "        jobs_esco_list = jobs_esco_container.find_all(class_=\"ecl-u-ml-2xs ng-star-inserted\")\n",
-    "        #print(jobs_esco_list[0])\n",
-    "        ESCO_JOBS = [job.text.replace(\"  -\",\"\").strip() for job in jobs_esco_list]\n",
-    "        #except:\n",
-    "            #ESCO_JOBS = None\n",
-    "        ad.update({\"parsed_title\":jobtitle, \"ESCOJOB\":ESCO_JOBS, \"description\": description})\n",
-    "        results.append(ad)\n",
-    "        if len(results)%50 == 0:\n",
-    "            with open(filename, 'w',encoding= \"utf-8\") as fp:\n",
-    "                json.dump(results, fp, indent = 2, ensure_ascii=False)\n",
-    "    with open(filename, 'w',encoding= \"utf-8\") as fp:\n",
-    "        json.dump(results, fp, indent = 2, ensure_ascii=False)\n",
-    "    driver.quit()\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_multithreading_eres(df, urls_parsed, headless=True):\n",
-    "    drivers = [driver_setup(headless) for _ in range(4)]\n",
-    "    currently = \"\".join([c for c in str(datetime.now()).split('.')[0] if c.isdigit()])\n",
-    "    filenames = [f\"00_data/03_output/eures_results/{currently}_eures_TESTADS{i}.json\" for i in range(1,5)]\n",
-    "    print(\"Sorting out parsed ads.\")\n",
-    "    urllist = df[~df[\"url\"].isin(urls_parsed)].to_dict(\"records\")\n",
-    "    print(f\"Parsing {len(urllist)} ads.\")\n",
-    "    #urllist = [x for x in tqdm(urllist) if x[\"url\"] not in set(urls_parsed)]\n",
-    "    chunks = np.array_split(urllist, 4)\n",
-    "    with ThreadPoolExecutor(max_workers=4) as executor:  \n",
-    "        bucket = executor.map(get_jobdescription_eres, chunks, drivers, filenames)\n",
-    "        results = [item for block in bucket for item in block]\n",
-    "    write_json(f\"00_data/03_output/eures_results/{currently}_eures_TESTADS_total.json\",results)\n",
-    "    return results"
    ]
   },
   {
@@ -189,37 +101,6 @@
    "metadata": {},
    "source": [
     "## add esco ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "esco_lookup_dict = load_json(r\"../00_data/ESCO/esco_lookup.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extend_jobs(ad):\n",
-    "    extended = []\n",
-    "    for job in ad[\"esco_jobs\"]:\n",
-    "        job_ext = dict(ad)\n",
-    "        job_ext[\"esco_job\"] = job\n",
-    "        try:\n",
-    "            id = esco_lookup_dict[job.lower()]\n",
-    "            job_ext[\"esco_id\"] = id\n",
-    "        except:\n",
-    "            job_ext[\"esco_id\"] = None\n",
-    "            continue\n",
-    "        if \".\" in id:\n",
-    "            extended.append(job_ext)\n",
-    "    return extended"
    ]
   },
   {
@@ -311,30 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import *\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2250"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parsed_test_ads = pd.DataFrame(load_json(\"../00_data/EURES/eures_testads_final.json\"))\n",
     "len(parsed_test_ads)"
@@ -343,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masterarbeit",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
@@ -357,14 +226,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.2"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "cb0bef7a9eff8501420d8e3c6496920c898020e76359dc7d7e37d89f971fe60a"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
