--- a/C - Ad Classifier/5_ClassifierSelectAds.ipynb
+++ b/C - Ad Classifier/5_ClassifierSelectAds.ipynb
@@ -2,54 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import *\n",
+    "# Import necessary libraries and modules\n",
+    "import sys\n",
+    "sys.path.append(\"..\")  # Add parent directory to the path\n",
+    "from _utils import load_json\n",
     "import pandas as pd\n",
     "import random\n",
     "import srsly\n",
-    "random.seed(42)\n",
+    "random.seed(42)  # Set random seed for reproducibility\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_text (ad):\n",
-    "    return \" \".join([ad[\"title_parsed\"].split(\" bei \")[0], ad[\"description\"]])\n",
-    "    \n",
-    "def empty_list(ad):\n",
+    "# Define helper functions\n",
+    "def get_combined_text(job_ad):\n",
+    "    \"\"\"\n",
+    "    Combine the parsed job title and description into a single text string.\n",
+    "\n",
+    "    Args:\n",
+    "        job_ad (dict): A dictionary containing job advertisement details.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Combined text of the job title and description.\n",
+    "    \"\"\"\n",
+    "    return \" \".join([job_ad[\"title_parsed\"].split(\" bei \")[0], job_ad[\"description\"]])\n",
+    "\n",
+    "def initialize_empty_label(job_ad):\n",
+    "    \"\"\"\n",
+    "    Initialize an empty list as the label for a job advertisement.\n",
+    "\n",
+    "    Args:\n",
+    "        job_ad (dict): A dictionary containing job advertisement details.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: An empty list as the label.\n",
+    "    \"\"\"\n",
     "    return []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_number_esco_id(id, length):\n",
-    "    id_short = id[:length]\n",
-    "    return id_short"
+    "def get_shortened_esco_id(esco_id, length):\n",
+    "    \"\"\"\n",
+    "    Shorten the ESCO ID to a specified length.\n",
+    "\n",
+    "    Args:\n",
+    "        esco_id (str): The full ESCO ID.\n",
+    "        length (int): The desired length of the shortened ESCO ID.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The shortened ESCO ID.\n",
+    "    \"\"\"\n",
+    "    return esco_id[:length]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobadsdf = pd.DataFrame(load_json(\"../00_data/jobads_for_classifiertraining.json\"))"
+    "# Load job advertisements for classifier training\n",
+    "job_ads_df = pd.DataFrame(load_json(\"../00_data/jobads_for_classifiertraining.json\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,51 +93,63 @@
     }
    ],
    "source": [
-    "jobadsdf_copy = jobadsdf.copy()\n",
-    "jobadsdf_copy[\"text\"] = jobadsdf_copy.apply(get_text, axis=1)\n",
-    "jobadsdf_copy[\"label\"] = jobadsdf_copy.apply(empty_list, axis=1)\n",
-    "jobadsdf_copy[\"esco_filtered\"] = jobadsdf_copy[\"esco_id\"].apply(get_number_esco_id, args=[4])\n",
-    "grouped_df = jobadsdf_copy.groupby(\"esco_filtered\").sum().reset_index()\n",
-    "escoids = list(grouped_df[\"esco_filtered\"])\n",
-    "#print(len(escoids))\n",
-    "random_choices = []\n",
-    "for id in tqdm(escoids):\n",
-    "    filtered_df = jobadsdf_copy[jobadsdf_copy[\"esco_filtered\"] == id]\n",
-    "    if len(filtered_df) <= 5:\n",
-    "        random_choices += filtered_df[[\"text\",\"label\"]].to_dict(\"records\")\n",
+    "# Process job advertisements to prepare for classifier training\n",
+    "job_ads_df_copy = job_ads_df.copy()\n",
+    "\n",
+    "# Combine job title and description into a single text field\n",
+    "job_ads_df_copy[\"text\"] = job_ads_df_copy.apply(get_combined_text, axis=1)\n",
+    "\n",
+    "# Initialize empty labels for each job advertisement\n",
+    "job_ads_df_copy[\"label\"] = job_ads_df_copy.apply(initialize_empty_label, axis=1)\n",
+    "\n",
+    "# Shorten ESCO IDs to 4 characters for grouping\n",
+    "job_ads_df_copy[\"esco_short_id\"] = job_ads_df_copy[\"esco_id\"].apply(get_shortened_esco_id, args=[4])\n",
+    "\n",
+    "# Group job advertisements by shortened ESCO ID and count occurrences\n",
+    "grouped_ads_df = job_ads_df_copy.groupby(\"esco_short_id\").sum().reset_index()\n",
+    "esco_ids = list(grouped_ads_df[\"esco_short_id\"])\n",
+    "\n",
+    "# Select up to 5 random job advertisements per ESCO ID\n",
+    "selected_ads = []\n",
+    "for esco_id in tqdm(esco_ids):\n",
+    "    filtered_ads = job_ads_df_copy[job_ads_df_copy[\"esco_short_id\"] == esco_id]\n",
+    "    if len(filtered_ads) <= 5:\n",
+    "        selected_ads += filtered_ads[[\"text\", \"label\"]].to_dict(\"records\")\n",
     "    else:\n",
-    "        random_choices += random.sample(filtered_df[[\"text\",\"label\"]].to_dict(\"records\"), 5)"
+    "        selected_ads += random.sample(filtered_ads[[\"text\", \"label\"]].to_dict(\"records\"), 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "srsly.write_jsonl(\"jsonl_annot_raw.jsonl\", random_choices)"
+    "# Save the selected job advertisements to a JSONL file for annotation\n",
+    "srsly.write_jsonl(\"jsonl_annot_raw.jsonl\", selected_ads)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Further process"
+    "# Further Process\n",
+    "This section describes the next steps for processing the JSONL file."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The jsonl file was further processed with [doccano](https://github.com/doccano/doccano)\n",
-    "2. A project for NER was created\n",
-    "3. The relevant paragraphs were marked as \"relevant\""
+    "1. The JSONL file was further processed with [doccano](https://github.com/doccano/doccano).\n",
+    "2. A project for Named Entity Recognition (NER) was created.\n",
+    "3. The relevant paragraphs were marked as \"relevant\"."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
@@ -119,12 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "cb0bef7a9eff8501420d8e3c6496920c898020e76359dc7d7e37d89f971fe60a"
-   }
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
