--- a/C - Ad Classifier/6_GC_TrainingClassification.ipynb
+++ b/C - Ad Classifier/6_GC_TrainingClassification.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "# Mount Google Drive and navigate to the training directory\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "%cd /content/drive/MyDrive/TRAINING"
@@ -35,6 +36,7 @@
    },
    "outputs": [],
    "source": [
+    "# Install required libraries for dataset handling and transformers\n",
     "%%capture\n",
     "!pip install datasets\n",
     "!pip install transformers"
@@ -48,6 +50,7 @@
    },
    "outputs": [],
    "source": [
+    "# Import necessary libraries and modules\n",
     "import srsly\n",
     "from transformers import AutoModelForSequenceClassification\n",
     "from transformers import AutoTokenizer\n",
@@ -68,8 +71,10 @@
    },
    "outputs": [],
    "source": [
-    "annots = [x for x in srsly.read_jsonl(r\"../00_data/Classifier/annots_n400.jsonl\")]\n",
-    "annots[0]"
+    "# Load annotations from a JSONL file\n",
+    "annotations_raw = [x for x in srsly.read_jsonl(r\"../00_data/Classifier/annots_n400.jsonl\")]\n",
+    "# Display the first annotation for inspection\n",
+    "annotations_raw[0]"
    ]
   },
   {
@@ -80,24 +85,31 @@
    },
    "outputs": [],
    "source": [
-    "# mark the relevant paragraphs with 0,\n",
-    "annotations = []\n",
-    "for item in annots:\n",
+    "# Process annotations to mark relevant paragraphs\n",
+    "processed_annotations = []\n",
+    "for annotation in annotations_raw:\n",
     "    indices = [0]\n",
-    "    for annot in item[\"label\"]:\n",
-    "        start = annot[0]\n",
-    "        end = annot[1]\n",
+    "    for label in annotation[\"label\"]:\n",
+    "        start = label[0]\n",
+    "        end = label[1]\n",
     "        indices.append(start)\n",
     "        indices.append(end)\n",
-    "    parts=[]\n",
-    "    for i , j in  zip(indices, indices[1:]+[None]):\n",
-    "        if not any(c.isalnum()  for c in item[\"text\"][i:j]):\n",
+    "    parts = []\n",
+    "    for start_idx, end_idx in zip(indices, indices[1:] + [None]):\n",
+    "        if not any(c.isalnum() for c in annotation[\"text\"][start_idx:end_idx]):\n",
     "            continue\n",
-    "        if [i, j, \"Relevant\"] in item[\"label\"]:\n",
-    "            annotations.append({\"text\":item[\"text\"][i:j].replace(\"\\n\", \" \").replace(\"\\t\", \" \"),\"label\":1})\n",
+    "        if [start_idx, end_idx, \"Relevant\"] in annotation[\"label\"]:\n",
+    "            processed_annotations.append({\n",
+    "                \"text\": annotation[\"text\"][start_idx:end_idx].replace(\"\\n\", \" \").replace(\"\\t\", \" \"),\n",
+    "                \"label\": 1\n",
+    "            })\n",
     "        else:\n",
-    "            annotations.append({\"text\":item[\"text\"][i:j].replace(\"\\n\", \" \").replace(\"\\t\", \" \"),\"label\":0})\n",
-    "df = pd.DataFrame(annotations)"
+    "            processed_annotations.append({\n",
+    "                \"text\": annotation[\"text\"][start_idx:end_idx].replace(\"\\n\", \" \").replace(\"\\t\", \" \"),\n",
+    "                \"label\": 0\n",
+    "            })\n",
+    "# Convert processed annotations to a DataFrame\n",
+    "annotations_df = pd.DataFrame(processed_annotations)"
    ]
   },
   {
@@ -122,7 +134,8 @@
    },
    "outputs": [],
    "source": [
-    "df[\"label\"].value_counts()"
+    "# Display the count of each label in the dataset\n",
+    "annotations_df[\"label\"].value_counts()"
    ]
   },
   {
@@ -148,7 +161,8 @@
    },
    "outputs": [],
    "source": [
-    "df"
+    "# Display the processed annotations DataFrame\n",
+    "annotations_df"
    ]
   },
   {
@@ -242,6 +256,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load the pre-trained model and tokenizer\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\"agne/jobGBERT\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"agne/jobGBERT\")"
    ]
@@ -254,8 +269,9 @@
    },
    "outputs": [],
    "source": [
-    "df_train, df_test_val = train_test_split(df,shuffle=True, random_state = 42)\n",
-    "df_test, df_val = train_test_split(df_test_val,test_size= 0.5, shuffle=True, random_state = 42)"
+    "# Split the dataset into training, testing, and validation sets\n",
+    "df_train, df_test_val = train_test_split(annotations_df, shuffle=True, random_state=42)\n",
+    "df_test, df_val = train_test_split(df_test_val, test_size=0.5, shuffle=True, random_state=42)"
    ]
   },
   {
@@ -280,6 +296,7 @@
    },
    "outputs": [],
    "source": [
+    "# Display the sizes of the training, testing, and validation sets\n",
     "print(len(df_train), len(df_test), len(df_val))"
    ]
   },
@@ -291,14 +308,32 @@
    },
    "outputs": [],
    "source": [
-    "def tokenize_dataset(df):\n",
-    "    df = df.map(tokenize_tuple ,remove_columns=[\"text\"])\n",
-    "    return df\n",
+    "# Define functions for tokenizing the dataset\n",
+    "def tokenize_dataset(dataframe):\n",
+    "    \"\"\"\n",
+    "    Tokenize the dataset using the pre-trained tokenizer.\n",
     "\n",
-    "def tokenize_tuple(tup):\n",
-    "    tokenize_dict = tokenizer(tup['text'],padding=True, truncation = True, max_length=512)\n",
-    "    tokenize_dict['label'] = tup['label']\n",
-    "    return tokenize_dict"
+    "    Args:\n",
+    "        dataframe (pd.DataFrame): The dataset to tokenize.\n",
+    "\n",
+    "    Returns:\n",
+    "        datasets.Dataset: The tokenized dataset.\n",
+    "    \"\"\"\n",
+    "    return dataframe.map(tokenize_row, remove_columns=[\"text\"])\n",
+    "\n",
+    "def tokenize_row(row):\n",
+    "    \"\"\"\n",
+    "    Tokenize a single row of the dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        row (dict): A dictionary containing the text and label.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary with tokenized text and label.\n",
+    "    \"\"\"\n",
+    "    tokenized = tokenizer(row['text'], padding=True, truncation=True, max_length=512)\n",
+    "    tokenized['label'] = row['label']\n",
+    "    return tokenized"
    ]
   },
   {
@@ -359,9 +394,10 @@
    },
    "outputs": [],
    "source": [
+    "# Tokenize the training, testing, and validation datasets\n",
     "dataset_train = tokenize_dataset(datasets.Dataset.from_pandas(df_train))\n",
     "dataset_test = tokenize_dataset(datasets.Dataset.from_pandas(df_test))\n",
-    "dataset_val  = tokenize_dataset(datasets.Dataset.from_pandas(df_val))"
+    "dataset_val = tokenize_dataset(datasets.Dataset.from_pandas(df_val))"
    ]
   },
   {
@@ -372,19 +408,18 @@
    },
    "outputs": [],
    "source": [
+    "# Define training arguments for the model\n",
     "training_args = TrainingArguments(\n",
-    "              output_dir=\"/content/model_checkpoints\",\n",
-    "              evaluation_strategy=\"epoch\",\n",
-    "              save_strategy = \"epoch\",\n",
-    "              per_device_train_batch_size=8,\n",
-    "              per_device_eval_batch_size=8,\n",
-    "              learning_rate=3e-5,\n",
-    "              num_train_epochs=10,\n",
-    "              #weight_decay = 0.1,\n",
-    "              load_best_model_at_end = True,\n",
-    "              #logging_steps = 100,\n",
-    "              save_total_limit=1\n",
-    "              )"
+    "    output_dir=\"/content/model_checkpoints\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    per_device_train_batch_size=8,\n",
+    "    per_device_eval_batch_size=8,\n",
+    "    learning_rate=3e-5,\n",
+    "    num_train_epochs=10,\n",
+    "    load_best_model_at_end=True,\n",
+    "    save_total_limit=1\n",
+    ")"
    ]
   },
   {
@@ -395,10 +430,19 @@
    },
    "outputs": [],
    "source": [
-    "def compute_metrics(eval_preds):\n",
+    "# Define a function to compute evaluation metrics\n",
+    "def compute_metrics(eval_predictions):\n",
+    "    \"\"\"\n",
+    "    Compute evaluation metrics for the model.\n",
+    "\n",
+    "    Args:\n",
+    "        eval_predictions (tuple): A tuple containing logits and labels.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary with computed metrics.\n",
+    "    \"\"\"\n",
     "    metric = load_metric(\"f1\")\n",
-    "    #metric = datasets.load_metric(\"f1\")\n",
-    "    logits, labels = eval_preds\n",
+    "    logits, labels = eval_predictions\n",
     "    predictions = np.argmax(logits, axis=-1)\n",
     "    return metric.compute(predictions=predictions, references=labels, average=\"weighted\")"
    ]
@@ -411,11 +455,15 @@
    },
    "outputs": [],
    "source": [
-    "trainer = Trainer(model, training_args,\n",
-    "                   train_dataset=dataset_train,\n",
-    "                   eval_dataset=dataset_val,\n",
-    "                   tokenizer=tokenizer,\n",
-    "                   compute_metrics=compute_metrics)"
+    "# Initialize the Trainer with the model, training arguments, and datasets\n",
+    "trainer = Trainer(\n",
+    "    model,\n",
+    "    training_args,\n",
+    "    train_dataset=dataset_train,\n",
+    "    eval_dataset=dataset_val,\n",
+    "    tokenizer=tokenizer,\n",
+    "    compute_metrics=compute_metrics\n",
+    ")"
    ]
   },
   {
@@ -441,7 +489,8 @@
    },
    "outputs": [],
    "source": [
-    "x = trainer.train()"
+    "# Train the model\n",
+    "trainer.train()"
    ]
   },
   {
@@ -452,7 +501,8 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report,f1_score"
+    "# Import additional metrics for evaluation\n",
+    "from sklearn.metrics import classification_report, f1_score"
    ]
   },
   {
@@ -478,9 +528,10 @@
    },
    "outputs": [],
    "source": [
-    "pred = trainer.predict(dataset_test)\n",
-    "print(f1_score(pred.predictions.argmax(axis = 1), pred.label_ids))\n",
-    "print(classification_report(pred.predictions.argmax(axis = 1), pred.label_ids))\n"
+    "# Evaluate the model on the test dataset\n",
+    "predictions = trainer.predict(dataset_test)\n",
+    "print(f1_score(predictions.predictions.argmax(axis=1), predictions.label_ids))\n",
+    "print(classification_report(predictions.predictions.argmax(axis=1), predictions.label_ids))"
    ]
   },
   {
@@ -491,6 +542,7 @@
    },
    "outputs": [],
    "source": [
+    "# Import seaborn for visualization\n",
     "import seaborn as sns"
    ]
   },
@@ -502,7 +554,11 @@
    },
    "outputs": [],
    "source": [
-    "evaldf = pd.DataFrame([pred.predictions.argmax(axis = 1), pred.label_ids], index = [\"predictions\",\"labels\"]).T"
+    "# Create a DataFrame for predictions and labels\n",
+    "evaluation_df = pd.DataFrame(\n",
+    "    [predictions.predictions.argmax(axis=1), predictions.label_ids],\n",
+    "    index=[\"predictions\", \"labels\"]\n",
+    ").T"
    ]
   },
   {
@@ -528,7 +584,8 @@
    },
    "outputs": [],
    "source": [
-    "sns.heatmap(pd.crosstab(evaldf[\"predictions\"],evaldf[\"labels\"]),annot=True,fmt=\"\")"
+    "# Plot a heatmap of the confusion matrix\n",
+    "sns.heatmap(pd.crosstab(evaluation_df[\"predictions\"], evaluation_df[\"labels\"]), annot=True, fmt=\"\")"
    ]
   },
   {
@@ -539,7 +596,8 @@
    },
    "outputs": [],
    "source": [
-    "trainer.save_model(\"..00_data/Classifier/model_classification_jobgbert\")"
+    "# Save the trained model\n",
+    "trainer.save_model(\"../00_data/Classifier/model_classification_jobgbert\")"
    ]
   }
  ],
