--- a/C - Ad Classifier/8_EURES_shortening.ipynb
+++ b/C - Ad Classifier/8_EURES_shortening.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Imports\n",
+    "This section imports all necessary libraries and modules for processing job advertisements."
    ]
   },
   {
@@ -14,13 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "tqdm.pandas()\n",
-    "from sentence_transformers import util\n",
-    "import os\n",
-    "from concurrent.futures import ThreadPoolExecutor"
+    "# Import custom utilities and helper functions\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from _utils import load_json, write_json\n",
+    "from _classification_helpers import setup_classification_pipeline"
    ]
   },
   {
@@ -29,9 +28,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import standard libraries and third-party modules\n",
     "from nltk import word_tokenize\n",
     "import math\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "from sentence_transformers import util\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import os"
    ]
   },
   {
@@ -40,6 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set random seed for reproducibility\n",
     "import random\n",
     "random.seed(42)"
    ]
@@ -50,53 +58,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def multithread_shortening(ads):\n",
-    "    pipes = [setup_classifier() for _ in range(4)] \n",
-    "    chunks = np.array_split(ads, 4)\n",
-    "    currently = \"\".join([c for c in str(datetime.now()).split('.')[0] if c.isdigit()])\n",
-    "    filenames = [f\"../00_data/EURES/{currently}_eures_ads_shortened{i}.json\" for i in range(1,5)]\n",
-    "    with ThreadPoolExecutor(max_workers=4) as executor:  \n",
-    "        bucket = executor.map(shorten_jobads, chunks,pipes, filenames)\n",
-    "        results = [item for block in bucket for item in block]\n",
-    "    with open(f\"../00_data/EURES/{currently}_total_ads_shortend.json\", 'w',encoding= \"utf-8\") as fp:\n",
-    "        json.dump(results, fp, indent = 2, ensure_ascii=False)\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Classifier application\n",
-    "def shorten_jobads(ads,pipe,filename):\n",
-    "    shortened_texts = []\n",
-    "    for ad in tqdm(ads):  \n",
-    "        annots_jobad = []\n",
-    "        splitted_ad = [x for x in ad.split(\"\\n\") if x != \"\" or x != \" ,\"]\n",
-    "        # if no \\n in the ad, tokenize and split at every 50, token\n",
-    "        if len(splitted_ad) == 1:\n",
-    "            tokenized = word_tokenize(ad, language=\"german\")\n",
-    "            no_chunks = math.ceil(len(tokenized)/50)\n",
-    "            splitted_ad = np.array_split((tokenized), no_chunks)\n",
-    "            splitted_ad = [\" \".join(x) for x in splitted_ad]\n",
-    "        for paragraph in splitted_ad:\n",
+    "# Function to shorten job advertisements by extracting relevant paragraphs\n",
+    "def shorten_job_ads(job_ads, classification_pipeline, output_file):\n",
+    "    \"\"\"\n",
+    "    Shortens job advertisements by processing their text and extracting relevant paragraphs.\n",
+    "\n",
+    "    Args:\n",
+    "        job_ads (list): List of job advertisement texts to be processed.\n",
+    "        classification_pipeline (callable): A classification pipeline function to classify text paragraphs.\n",
+    "        output_file (str): Path to save the shortened job advertisements as a JSON file.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of dictionaries containing the original job ad and its shortened version.\n",
+    "    \"\"\"\n",
+    "    shortened_ads = []\n",
+    "\n",
+    "    for job_ad_text in tqdm(job_ads, desc=\"Processing job ads\"):\n",
+    "        annotated_paragraphs = []\n",
+    "        # Split the job ad into paragraphs, ignoring empty lines\n",
+    "        paragraphs = [line for line in job_ad_text.split(\"\\n\") if line.strip()]\n",
+    "\n",
+    "        # If the job ad has no paragraphs, tokenize and split into chunks of 50 tokens\n",
+    "        if len(paragraphs) == 1:\n",
+    "            tokens = word_tokenize(job_ad_text, language=\"german\")\n",
+    "            num_chunks = math.ceil(len(tokens) / 50)\n",
+    "            paragraphs = [\" \".join(chunk) for chunk in np.array_split(tokens, num_chunks)]\n",
+    "\n",
+    "        # Process each paragraph using the classification pipeline\n",
+    "        for paragraph in paragraphs:\n",
     "            try:\n",
-    "                res = pipe(paragraph)[0][\"label\"]\n",
-    "            except:\n",
-    "                res = pipe(paragraph[:250])[0][\"label\"]\n",
-    "            annots_jobad.append({\"text\":paragraph,\"label\":res})\n",
-    "        text_short = \" \".join([x[\"text\"] for x in annots_jobad if x[\"label\"] == \"LABEL_1\"])\n",
-    "        shortened_texts.append({ad:text_short})\n",
-    "        # safe results to json after every 50th ad\n",
-    "        if len(shortened_texts)%50 == 0:\n",
-    "            with open(filename, 'w',encoding= \"utf-8\") as fp:\n",
-    "                json.dump(shortened_texts, fp, indent = 2, ensure_ascii=False)\n",
-    "    # safe final results \n",
-    "    with open(filename, 'w',encoding= \"utf-8\") as fp:\n",
-    "        json.dump(shortened_texts, fp, indent = 2, ensure_ascii=False)\n",
-    "    return shortened_texts"
+    "                label = classification_pipeline(paragraph)[0][\"label\"]\n",
+    "            except Exception:\n",
+    "                # Fallback for long paragraphs\n",
+    "                label = classification_pipeline(paragraph[:250])[0][\"label\"]\n",
+    "            annotated_paragraphs.append({\"text\": paragraph, \"label\": label})\n",
+    "\n",
+    "        # Combine paragraphs labeled as \"LABEL_1\" into a shortened version of the job ad\n",
+    "        shortened_text = \" \".join(\n",
+    "            [annotation[\"text\"] for annotation in annotated_paragraphs if annotation[\"label\"] == \"LABEL_1\"]\n",
+    "        )\n",
+    "        shortened_ads.append({\"original\": job_ad_text, \"shortened\": shortened_text})\n",
+    "\n",
+    "        # Save intermediate results to JSON after every 50 job ads\n",
+    "        if len(shortened_ads) % 50 == 0:\n",
+    "            with open(output_file, 'w', encoding=\"utf-8\") as file:\n",
+    "                json.dump(shortened_ads, file, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "    # Save final results to JSON\n",
+    "    with open(output_file, 'w', encoding=\"utf-8\") as file:\n",
+    "        json.dump(shortened_ads, file, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "    return shortened_ads"
    ]
   },
   {
@@ -105,16 +117,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_random_ads(df, k):\n",
-    "    random_choices = []\n",
-    "    ids_unique = df[\"esco_id\"].unique()\n",
-    "    for id in tqdm(ids_unique):\n",
-    "        filtered_df = df[df[\"esco_id\"] == id]\n",
-    "        if len(filtered_df) <= k:\n",
-    "            random_choices += filtered_df.to_dict(\"records\")\n",
+    "# Function to shorten job advertisements using multithreading\n",
+    "def multithread_shortening(job_ads):\n",
+    "    \"\"\"\n",
+    "    Shortens job advertisements using multiple threads for faster processing.\n",
+    "\n",
+    "    Args:\n",
+    "        job_ads (list): List of job advertisement texts to be processed.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of dictionaries containing the original job ad and its shortened version.\n",
+    "    \"\"\"\n",
+    "    classification_pipelines = [setup_classification_pipeline() for _ in range(4)]\n",
+    "    job_ad_chunks = np.array_split(job_ads, 4)\n",
+    "    timestamp = \"\".join([char for char in str(datetime.now()).split('.')[0] if char.isdigit()])\n",
+    "    output_files = [f\"../00_data/EURES/{timestamp}_shortened_ads_{i}.json\" for i in range(1, 5)]\n",
+    "\n",
+    "    with ThreadPoolExecutor(max_workers=4) as executor:\n",
+    "        results = executor.map(shorten_job_ads, job_ad_chunks, classification_pipelines, output_files)\n",
+    "        combined_results = [item for result in results for item in result]\n",
+    "\n",
+    "    # Save the combined results to a single JSON file\n",
+    "    with open(f\"../00_data/EURES/{timestamp}_shortened_ads_total.json\", 'w', encoding=\"utf-8\") as file:\n",
+    "        json.dump(combined_results, file, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "    return combined_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to select random job advertisements for testing\n",
+    "def select_random_ads(dataframe, max_per_esco_id):\n",
+    "    \"\"\"\n",
+    "    Selects random job advertisements for each ESCO ID.\n",
+    "\n",
+    "    Args:\n",
+    "        dataframe (pd.DataFrame): DataFrame containing job advertisements.\n",
+    "        max_per_esco_id (int): Maximum number of job ads to select per ESCO ID.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of randomly selected job advertisements.\n",
+    "    \"\"\"\n",
+    "    selected_ads = []\n",
+    "    unique_esco_ids = dataframe[\"esco_id\"].unique()\n",
+    "\n",
+    "    for esco_id in tqdm(unique_esco_ids, desc=\"Selecting random ads\"):\n",
+    "        filtered_ads = dataframe[dataframe[\"esco_id\"] == esco_id]\n",
+    "        if len(filtered_ads) <= max_per_esco_id:\n",
+    "            selected_ads += filtered_ads.to_dict(\"records\")\n",
     "        else:\n",
-    "            random_choices += random.sample(filtered_df.to_dict(\"records\"), k)\n",
-    "    return random_choices"
+    "            selected_ads += random.sample(filtered_ads.to_dict(\"records\"), max_per_esco_id)\n",
+    "\n",
+    "    return selected_ads"
    ]
   },
   {
@@ -122,7 +180,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load Data"
+    "# Load Data\n",
+    "This section loads the job advertisements data for processing."
    ]
   },
   {
@@ -131,8 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ads = load_json(r\"../00_data/EURES/parsed_ads_final.json\")\n",
-    "len(ads)"
+    "# Load parsed job advertisements from JSON file\n",
+    "job_ads = load_json(r\"../00_data/EURES/parsed_ads_final.json\")\n",
+    "len(job_ads)"
    ]
   },
   {
@@ -141,9 +201,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ads_df = pd.DataFrame(ads)\n",
-    "ads_df.drop([\"count\"], inplace=True, axis=1)\n",
-    "ads_df[\"count_esco_jobs\"] = ads_df[\"esco_jobs\"].apply(len)"
+    "# Convert job advertisements to a DataFrame and add additional columns\n",
+    "job_ads_df = pd.DataFrame(job_ads)\n",
+    "job_ads_df.drop([\"count\"], inplace=True, axis=1)\n",
+    "job_ads_df[\"num_esco_jobs\"] = job_ads_df[\"esco_jobs\"].apply(len)"
    ]
   },
   {
@@ -152,7 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_descriptions = ads_df[\"description\"].unique()\n",
+    "# Get unique job descriptions\n",
+    "unique_descriptions = job_ads_df[\"description\"].unique()\n",
     "len(unique_descriptions)"
    ]
   },
@@ -162,7 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_descriptions = [x for x in tqdm(unique_descriptions) if x not in processed_descriptions]\n",
+    "# Filter unique descriptions\n",
+    "unique_descriptions = [desc for desc in tqdm(unique_descriptions) if desc not in unique_descriptions]\n",
     "len(unique_descriptions)"
    ]
   },
@@ -172,9 +235,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load test job advertisements\n",
     "test_ads = load_json(\"../00_data/EURES/eures_testads_final.json\")\n",
-    "selected_ads = pd.DataFrame(test_ads)\n",
-    "unique_descriptions = list(selected_ads[\"description\"].unique())\n",
+    "\n",
+    "# Convert test ads to DataFrame and get unique descriptions\n",
+    "test_ads_df = pd.DataFrame(test_ads)\n",
+    "unique_descriptions = list(test_ads_df[\"description\"].unique())\n",
     "len(unique_descriptions)"
    ]
   },
@@ -184,7 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shortened_desc = multithread_shortening(unique_descriptions)"
+    "# Shorten job descriptions using multithreading\n",
+    "shortened_descriptions = multithread_shortening(unique_descriptions)"
    ]
   },
   {
@@ -193,8 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(processed_ads)\n",
-    "len(ads)"
+    "# Add shortened descriptions to the DataFrame\n",
+    "job_ads_df[\"shortened_texts\"] = shortened_descriptions"
    ]
   },
   {
@@ -203,42 +270,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ads_df = pd.DataFrame(ads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "replace_dict = {}\n",
-    "for item in processed_ads:\n",
-    "    replace_dict.update(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ads_df[\"short_texts\"] = ads_df[\"description\"].map(replace_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_json(\"../00_data/EURES/0_pars_short_ads_final.json\", ads_df.to_dict(\"records\"))"
+    "# Save the updated job advertisements with shortened descriptions to JSON\n",
+    "write_json(\"../00_data/EURES/parsed_shortened_ads_final.json\", job_ads_df.to_dict(\"records\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
@@ -252,12 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "cb0bef7a9eff8501420d8e3c6496920c898020e76359dc7d7e37d89f971fe60a"
-   }
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
