--- a/D - Preparation SBERT Model Training/10_CreateTrainingData.ipynb
+++ b/D - Preparation SBERT Model Training/10_CreateTrainingData.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import *\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from _utils import load_jobs\n",
     "import random\n",
     "from collections import Counter\n",
     "import numpy as np\n",
