--- a/E - SBERT Model Training/11_GC_Pretraining.ipynb
+++ b/E - SBERT Model Training/11_GC_Pretraining.ipynb
@@ -11,7 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from _utils import flatten_list\n",
+    "from training_helpers import load_data_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -31,86 +43,15 @@
    },
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
-    "# %cd /content/drive/MyDrive/TRAINING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "y4zyVrZvV-2I"
-   },
-   "outputs": [],
-   "source": [
-    "# %%capture\n",
-    "# !pip install sentence_transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AkkomPGdV3dV"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lw\\miniconda3\\envs\\masterarbeit_lwo\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sentence_transformers import SentenceTransformer, InputExample\n",
+    "# Import necessary libraries\n",
+    "from sentence_transformers import SentenceTransformer, InputExample, losses\n",
     "from torch.utils.data import DataLoader\n",
-    "from sentence_transformers import models, losses, util\n",
     "from tqdm import tqdm\n",
-    "import random\n",
-    "from sentence_transformers import evaluation\n",
-    "import json\n",
     "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from helpers import load_data_pairs, flatten_list,load_json\n",
     "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from datetime import datetime\n",
-    "from sklearn.model_selection import KFold\n",
-    "from transformers import set_seed\n",
-    "set_seed(42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "722fJkSlB-VR"
-   },
-   "outputs": [],
-   "source": [
-    "def create_trainig_samples(pos_dev_samples,neg_pairs):\n",
-    "  dev_set_total =[]\n",
-    "  anchors = set([x[0] for x in pos_dev_samples])\n",
-    "  neg_dev_samples = [x for x in neg_pairs if x[0] in anchors]\n",
-    "  print(\"Creating Dev Set\")\n",
-    "  for anchor in tqdm(anchors):\n",
-    "    pos_pairs_filtered = [x[1] for x in pos_dev_samples if x[0]==anchor]\n",
-    "    neg_pairs_filtered = [x[1] for x in neg_dev_samples if x[0]==anchor]\n",
-    "    dev_set_total.append({\"query\":anchor,\"positive\":pos_pairs_filtered,\"negative\":neg_pairs_filtered})\n",
-    "  return dev_set_total"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "7njofwant2wW"
-   },
-   "source": [
-    "## Pretrained Model"
+    "import os"
    ]
   },
   {
@@ -124,33 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 5296,
-     "status": "ok",
-     "timestamp": 1681799390356,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "pLe6jGtfJxfR",
-    "outputId": "09f9e34c-945a-4483-9bfa-c1ee11e09489"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6/6 [00:02<00:00,  2.67it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data_dict = load_data_pairs()\n",
     "pos_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
@@ -175,15 +92,6 @@
    },
    "source": [
     "# Pre-Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "kp09dET0fkAl"
-   },
-   "source": [
-    "##  TSDAE"
    ]
   },
   {
@@ -227,6 +135,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "kp09dET0fkAl"
+   },
+   "source": [
+    "##  TSDAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 5296,
+     "status": "ok",
+     "timestamp": 1681799390356,
+     "user": {
+      "displayName": "Lukas Wolfrum",
+      "userId": "10737638498661133063"
+     },
+     "user_tz": -120
+    },
+    "id": "pLe6jGtfJxfR",
+    "outputId": "09f9e34c-945a-4483-9bfa-c1ee11e09489"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "data_dict = load_data_pairs()\n",
+    "pos_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
+    "neg_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -255,6 +205,54 @@
     ")\n",
     "model.save(\"../00_data/SBERT_Models/models/gbert_TSDAE_epochs5\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "7njofwant2wW"
+   },
+   "source": [
+    "## Pretrained Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "722fJkSlB-VR"
+   },
+   "outputs": [],
+   "source": [
+    "def create_trainig_samples(pos_dev_samples,neg_pairs):\n",
+    "  dev_set_total =[]\n",
+    "  anchors = set([x[0] for x in pos_dev_samples])\n",
+    "  neg_dev_samples = [x for x in neg_pairs if x[0] in anchors]\n",
+    "  print(\"Creating Dev Set\")\n",
+    "  for anchor in tqdm(anchors):\n",
+    "    pos_pairs_filtered = [x[1] for x in pos_dev_samples if x[0]==anchor]\n",
+    "    neg_pairs_filtered = [x[1] for x in neg_dev_samples if x[0]==anchor]\n",
+    "    dev_set_total.append({\"query\":anchor,\"positive\":pos_pairs_filtered,\"negative\":neg_pairs_filtered})\n",
+    "  return dev_set_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "y4zyVrZvV-2I"
+   },
+   "outputs": [],
+   "source": [
+    "# %%capture\n",
+    "# !pip install sentence_transformers"
+   ]
   }
  ],
  "metadata": {
@@ -266,7 +264,7 @@
   },
   "gpuClass": "premium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
@@ -280,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
