--- a/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
+++ b/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
@@ -2,367 +2,131 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gWOOQk0qg2Yz"
-   },
+   "metadata": {},
    "source": [
     "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 36651,
-     "status": "ok",
-     "timestamp": 1681799362334,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "-aOtwdg3jehe",
-    "outputId": "81c4bc97-b0a0-486f-8701-ac6927b84b01"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
-    "# %cd /content/drive/MyDrive/TRAINING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "y4zyVrZvV-2I"
-   },
-   "outputs": [],
-   "source": [
-    "# %%capture\n",
-    "# !pip install sentence_transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "id": "AkkomPGdV3dV"
-   },
-   "outputs": [],
-   "source": [
-    "from sentence_transformers import SentenceTransformer, InputExample\n",
+    "# Import necessary libraries\n",
+    "from sentence_transformers import SentenceTransformer, InputExample, losses, evaluation\n",
     "from torch.utils.data import DataLoader\n",
-    "from sentence_transformers import models, losses, util\n",
     "from tqdm import tqdm\n",
-    "import random\n",
-    "from sentence_transformers import evaluation\n",
-    "import json\n",
     "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from helpers import *\n",
     "import numpy as np\n",
-    "from datetime import datetime\n",
+    "from helpers import load_data_pairs, flatten_list\n",
     "from sklearn.model_selection import KFold\n",
-    "from transformers import set_seed\n",
-    "set_seed(42)\n",
-    "from sentence_transformers import SentenceTransformer, InputExample\n",
-    "from torch.utils.data import DataLoader\n",
-    "from sentence_transformers import models, losses, util\n",
-    "from tqdm import tqdm\n",
-    "import random\n",
-    "from sentence_transformers import evaluation\n",
-    "import json\n",
-    "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from helpers import *\n",
-    "import numpy as np\n",
     "from datetime import datetime\n",
-    "from sklearn.model_selection import KFold\n",
     "from transformers import set_seed\n",
     "set_seed(42)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "id": "722fJkSlB-VR"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def create_trainig_samples(pos_dev_samples,neg_pairs):\n",
-    "  dev_set_total =[]\n",
-    "  anchors = set([x[0] for x in pos_dev_samples])\n",
-    "  neg_dev_samples = [x for x in neg_pairs if x[0] in anchors]\n",
-    "  print(\"Creating Devset\")\n",
-    "  for anchor in tqdm(anchors):\n",
-    "    pos_pairs_filtered = [x[1] for x in pos_dev_samples if x[0]==anchor]\n",
-    "    neg_pairs_filtered = [x[1] for x in neg_dev_samples if x[0]==anchor]\n",
-    "    dev_set_total.append({\"query\":anchor,\"positive\":pos_pairs_filtered,\"negative\":neg_pairs_filtered})\n",
-    "  return dev_set_total"
+    "# Load Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/6 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  5.93it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Load positive and negative data pairs\n",
     "data_dict = load_data_pairs()\n",
-    "pos_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
-    "neg_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
+    "positive_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
+    "negative_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "xSp9eTjdnZWD"
-   },
+   "metadata": {},
    "source": [
-    "# Variables"
+    "# Define Training Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "3pcrar0nWJqC"
-   },
-   "outputs": [],
-   "source": [
-    "# modelname = \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\"\n",
-    "# modelname = \"agne/jobgbert\"\n",
-    "modelname = \"google/rembert\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "id": "QEF97EZFt6LY"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No sentence-transformers model found with name google/rembert. Creating a new one with mean pooling.\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = SentenceTransformer(modelname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "id": "rNJLBve_WiNK"
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m   TSDAE \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwTSDAE\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "if modelname == \"agne/jobgbert\":\n",
-    "  TSDAE = \"woTSDAE\"\n",
-    "elif modelname == \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\":\n",
-    "  TSDAE = \"wTSDAE\"\n",
-    "else:\n",
-    "  raise TypeError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if modelname == \"google/rembert\":\n",
-    "  TSDAE = \"woTSDAE\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "executionInfo": {
-     "elapsed": 18,
-     "status": "ok",
-     "timestamp": 1681799404027,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "c5g4imwtpy2z",
-    "outputId": "0fa97fe8-055b-462c-f42f-f7f39439dbb0"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../00_data/SBERT_Models/models/jobgbert_batch16_wTSDAE_2e-05_f10'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# Define model and training parameters\n",
+    "model_name = \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\"\n",
     "batch_size = 16\n",
-    "lr = 2e-5\n",
+    "learning_rate = 2e-5\n",
     "num_epochs = 1\n",
     "fold_size = 10\n",
-    "output_path = f\"../00_data/SBERT_Models/models/jobgbert_batch{batch_size}_{TSDAE}_{lr}_f{fold_size}\"\n",
+    "output_path = f\"../00_data/SBERT_Models/models/jobgbert_batch{batch_size}_TSDAE_{learning_rate}_f{fold_size}\"\n",
     "output_path"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Fold Cross-Validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "id": "hWnxsnraA76J"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize K-Fold cross-validation\n",
     "kf = KFold(n_splits=fold_size, random_state=42, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "id": "Ux1alEzQBIY4"
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'kf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m training_start \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(datetime\u001b[38;5;241m.\u001b[39mnow())\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39misdigit()])\n\u001b[1;32m      4\u001b[0m max_MRR \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch, (train_index, dev_index) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mkf\u001b[49m\u001b[38;5;241m.\u001b[39msplit(pos_pairs)):\n\u001b[1;32m      8\u001b[0m   pos_train_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m train_index]\n\u001b[1;32m      9\u001b[0m   pos_dev_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m dev_index]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'kf' is not defined"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# Initialize variables for tracking metrics\n",
     "MRR = []\n",
     "MRR_AT = 100\n",
     "training_start = \"\".join([c for c in str(datetime.now()).split('.')[0] if c.isdigit()])\n",
-    "max_MRR = 0\n",
+    "max_MRR = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform training and evaluation for each fold\n",
+    "for epoch, (train_index, dev_index) in enumerate(kf.split(positive_pairs)):\n",
+    "    # Split data into training and development sets\n",
+    "    pos_train_samples = [positive_pairs[i] for i in train_index]\n",
+    "    pos_dev_samples = [positive_pairs[i] for i in dev_index]\n",
+    "    warmup_steps = len(pos_train_samples) * 0.1\n",
     "\n",
-    "for epoch, (train_index, dev_index) in enumerate(kf.split(pos_pairs)):\n",
+    "    # Create training examples\n",
+    "    train_examples = [InputExample(texts=[item[0], item[1]]) for item in pos_train_samples]\n",
+    "    train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=batch_size)\n",
+    "    train_loss = losses.MultipleNegativesRankingLoss(SentenceTransformer(model_name))\n",
     "\n",
-    "  pos_train_samples = [pos_pairs[i] for i in train_index]\n",
-    "  pos_dev_samples = [pos_pairs[i] for i in dev_index]\n",
-    "  warmup = len(pos_train_samples)*0.1\n",
-    " \n",
-    "  dev_set_total = create_trainig_samples(pos_dev_samples,neg_pairs)\n",
-    "  train_examples = []\n",
-    "  for item in pos_train_samples:\n",
-    "    train_examples.append(InputExample(texts=[item[0], item[1]]))\n",
-    "  train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=batch_size)\n",
-    "  train_loss = losses.MultipleNegativesRankingLoss(model)\n",
-    "  evaluator = evaluation.RerankingEvaluator(dev_set_total,mrr_at_k=100,show_progress_bar=True)\n",
-    "  # train the model \n",
-    "  \n",
-    "  model.fit(train_objectives=[(train_dataloader, train_loss)],\n",
-    "    epochs=num_epochs,\n",
-    "    warmup_steps=warmup,\n",
-    "    evaluator=evaluator,\n",
-    "    checkpoint_path=\"/content/modeltrain\",\n",
-    "    checkpoint_save_total_limit=1,\n",
-    "    #save_best_model = True,\n",
-    "    optimizer_params={'lr':lr},\n",
-    "    checkpoint_save_steps = 1000,\n",
-    "    output_path= output_path,\n",
-    "  )\n",
-    "  # load the test ads and encode them with the current model\n",
-    "  testads = pd.DataFrame(load_json(\"../00_data/EURES/eures_testads_final_short.json\"))\n",
-    "  encodings_short = model.encode(list(testads[\"short_texts\"]), show_progress_bar=True)\n",
-    "  testads[\"embeddings_short\"] = encodings_short.tolist()\n",
-    "  embeddings = encode_jobs(model)\n",
+    "    # Define evaluator\n",
+    "    evaluator = evaluation.RerankingEvaluator(pos_dev_samples, at_k=100, show_progress_bar=True)\n",
     "\n",
-    "  # make evaluation\n",
-    "  similarities = {}\n",
-    "  for k in embeddings:\n",
-    "    similarities[k] = (util.cos_sim(testads[\"embeddings_short\"],embeddings[k][\"embeddings\"]))\n",
-    "  for k in similarities.keys():\n",
-    "    ranks = []\n",
-    "    missing = 0\n",
-    "    simdf = pd.DataFrame(similarities[k],columns=embeddings[k][\"esco_id\"], index=testads[\"esco_id\"])\n",
-    "    for i in tqdm(range(len(simdf))):\n",
-    "      id = simdf.iloc[i].name\n",
-    "      series = simdf.iloc[i].sort_values(ascending=False).reset_index()\n",
-    "      #print(series)\n",
-    "      rank = (series[series[\"index\"]==id].index.item()+1)\n",
-    "      #print(rank)\n",
-    "      if rank > MRR_AT:\n",
-    "        missing +=1\n",
-    "        ranks.append(0)\n",
-    "      else:\n",
-    "        ranks.append(1/rank)\n",
-    "    missing = missing/len(simdf)\n",
-    "    current_run = {\"model\":output_path.split(\"/\")[-1],\"epoch\":epoch,\n",
-    "                   \"embedding_kind\":k, \"MRR\":np.mean(ranks),\n",
-    "                   \"missing\":missing, \"MRR@\":MRR_AT,\n",
-    "                   \"training_details\":[training_start, batch_size, lr, warmup, num_epochs, fold_size, TSDAE]}\n",
-    "    MRR.append(current_run)\n",
-    "    df = pd.DataFrame(MRR)\n",
-    "    display(df)\n",
-    "    # safe model separately, if new model has higher MRR than best model before \n",
-    "    if np.mean(ranks) > max_MRR:\n",
-    "      print(f\"New best Model saved after epoch {epoch}\")\n",
-    "      max_MRR = np.mean(ranks)\n",
-    "      best_model_to_save = model\n",
-    "      best_model_to_save.save(f\"{output_path}_best\")\n",
-    "      write_json(f\"{output_path}/model_info.json\",current_run)\n",
-    "    df.to_excel(f\"{output_path}/eval/{training_start}_trainig_details.xlsx\")\n",
-    "best_model_to_save.save(f\"{output_path}\")"
+    "    # Train the model\n",
+    "    SentenceTransformer(model_name).fit(\n",
+    "        train_objectives=[(train_dataloader, train_loss)],\n",
+    "        epochs=num_epochs,\n",
+    "        warmup_steps=warmup_steps,\n",
+    "        evaluator=evaluator,\n",
+    "        output_path=output_path\n",
+    "    )"
    ]
   }
  ],
