--- a/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
+++ b/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "# Mount Google Drive (if using Google Colab)\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
     "# %cd /content/drive/MyDrive/TRAINING"
@@ -45,6 +46,7 @@
    },
    "outputs": [],
    "source": [
+    "# Install necessary libraries (if using Google Colab)\n",
     "# %%capture\n",
     "# !pip install sentence_transformers\n",
     "# !pip install pypdf\n",
@@ -53,7 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from _utils import load_json,load_pickle\n",
+    "from training_helpers import encode_jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -71,51 +85,15 @@
     "id": "nSJ_xOTyNe79",
     "outputId": "1bf2344e-6aa9-4771-ac7d-dd4cce459371"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770451/1460843178.py:3: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
-      "  from IPython.core.display import display, HTML\n",
-      "[nltk_data] Downloading package punkt to /home/roj14702/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer, util\n",
-    "from datetime import datetime\n",
-    "from IPython.core.display import display, HTML\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "import random\n",
-    "random.seed(42)\n",
     "import pandas as pd\n",
-    "from helpers import *\n",
-    "import pickle\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import torch\n",
-    "from pypdf import PdfReader\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from tqdm import tqdm \n",
-    "from collections import Counter\n",
-    "import math\n",
-    "from nltk import word_tokenize\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer,pipeline\n",
-    "import nltk\n",
-    "nltk.download('punkt')"
+    "import xlsxwriter"
    ]
   },
   {
@@ -125,171 +103,6 @@
    },
    "source": [
     "# Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 9,
-     "status": "ok",
-     "timestamp": 1684238849706,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "XfGrYGfhujsN"
-   },
-   "outputs": [],
-   "source": [
-    "def load_cvs():\n",
-    "    cvs = []\n",
-    "    for i in range(1,6):\n",
-    "        cv = \"\"\n",
-    "        reader = PdfReader(f\"../00_data/CVs/CV_{i}.pdf\")\n",
-    "\n",
-    "        pages = reader.pages\n",
-    "        for i in range(len(pages)):\n",
-    "            page = reader.pages[i].extract_text().strip()\n",
-    "            cv +=page\n",
-    "        cvs.append(cv)\n",
-    "    return cvs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 8,
-     "status": "ok",
-     "timestamp": 1684238849706,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "l_8YywleOER5"
-   },
-   "outputs": [],
-   "source": [
-    "def load_pickle(filepath):\n",
-    "  with open(filepath, \"rb\") as fIn:\n",
-    "      stored_data = pickle.load(fIn)\n",
-    "  return stored_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 8,
-     "status": "ok",
-     "timestamp": 1684238849706,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "pSNVHdHjfJD4"
-   },
-   "outputs": [],
-   "source": [
-    "def setup_classifier():\n",
-    "    path = \"../00_data/Classifier/model_classification_jobgbert/\"\n",
-    "    model = AutoModelForSequenceClassification.from_pretrained(path)\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(path)\n",
-    "    Classifier = pipeline(\"text-classification\",model,tokenizer=tokenizer)\n",
-    "    return Classifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 6,
-     "status": "ok",
-     "timestamp": 1684238849706,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "OQAUPoyf6ATh"
-   },
-   "outputs": [],
-   "source": [
-    "def ismanager(ad):\n",
-    "  return \"leiter\" in ad[\"jobtitle\"].lower() or \"führungskraft\" in ad[\"jobtitle\"].lower() or \"arzt\" in ad[\"jobtitle\"].lower() #or ad[\"esco_id\"][0]==\"1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 7,
-     "status": "ok",
-     "timestamp": 1684238849707,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "x0qpW7QPrJi3"
-   },
-   "outputs": [],
-   "source": [
-    "def text_alphanum(text):\n",
-    "  return \"\".join(x for x in text if x.isalnum() or x.isspace())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 7,
-     "status": "ok",
-     "timestamp": 1684238849707,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "EyDo7RmGejgJ"
-   },
-   "outputs": [],
-   "source": [
-    "def shorten_text(text,pipe):\n",
-    "    annots_jobad = []\n",
-    "    splitted_text = [x for x in text.split(\"\\n\") if x != \"\" or x != \" ,\"]\n",
-    "    print(len(splitted_text))\n",
-    "    if len(splitted_text) <= 2 or len(splitted_text)>50:\n",
-    "      tokenized = word_tokenize(text, language=\"german\")\n",
-    "      no_chunks = math.ceil(len(tokenized)/20)\n",
-    "      print(no_chunks)\n",
-    "      splitted_text = np.array_split((tokenized), no_chunks)\n",
-    "      splitted_text = [\" \".join(x) for x in splitted_text]\n",
-    "    #print(len(splitted_text))\n",
-    "    for paragraph in splitted_text:\n",
-    "        try:\n",
-    "            res = pipe(paragraph)[0][\"label\"]\n",
-    "        except:\n",
-    "            res = pipe(paragraph[:250])[0][\"label\"]\n",
-    "        annots_jobad.append({\"text\":paragraph,\"label\":res})\n",
-    "        text_short = \" \".join([x[\"text\"] for x in annots_jobad if x[\"label\"] == \"LABEL_1\"])\n",
-    "    return text_short"
    ]
   },
   {
@@ -303,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -324,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2104,
@@ -354,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,24 +185,7 @@
     "id": "QE5A4LArONyu",
     "outputId": "21864e40-1b76-4e6e-b0f2-879d4e9031f7"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available model: gbert_batch32_woTSDAE_2e-05_f10\n",
-      "Available model: gbert_batch16_wTSDAE_2e-05_f10_best\n",
-      "Available model: jobgbert_TSDAE_epochs5\n",
-      "Available model: jobgbert_batch32_woTSDAE_2e-05_f10\n",
-      "Available model: consultantbert_multilingual_best\n",
-      "Available model: gbert_TSDAE_epochs5\n",
-      "Available model: consultantbert_multilingual_test\n",
-      "Available model: gbert_batch16_wTSDAE_2e-05_f10\n",
-      "Available model: consultantbert_multilingual_test_best\n",
-      "Available model: consultantbert_multilingual\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in os.listdir(prefix_path):\n",
     "  print(f\"Available model: {model}\")"
@@ -397,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -445,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -459,49 +255,7 @@
     },
     "id": "cbQmmDTzfEvS"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Model jobgbert_batch32_woTSDAE_2e-05_f10/\n",
-      "dict_keys(['skillsets', 'desc', 'jobtitle'])\n",
-      "Creating Embeddings.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b62b760f8e64a028be6d48c0b1860d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/71 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished creating Embeddings. Evaluating.\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'job_centroid'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m similarities \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjob_centroid\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m---> 26\u001b[0m   similarities[k] \u001b[38;5;241m=\u001b[39m (util\u001b[38;5;241m.\u001b[39mcos_sim(testads[textkind],\u001b[43membeddings\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124membeddings\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m similarities:\n\u001b[1;32m     29\u001b[0m   ranks \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'job_centroid'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MRR = []\n",
     "MRR_AT = 100\n",
