--- a/E - SBERT Model Training/20_FinalPredictionsForCVs.ipynb
+++ b/E - SBERT Model Training/20_FinalPredictionsForCVs.ipynb
@@ -69,6 +69,7 @@
    },
    "outputs": [],
    "source": [
+    "# Import necessary libraries\n",
     "from helpers import *\n",
     "from sentence_transformers import SentenceTransformer,util\n",
     "import numpy as np\n",
@@ -95,6 +96,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load ESCO jobs data\n",
     "jobs = load_json(\"../00_data/ESCO/ESCO_JOBS_ALL.json\")\n",
     "esco_lookup = {}\n",
     "for job in jobs:\n",
@@ -108,7 +110,7 @@
     "id": "b_Z0pgsvyPZh"
    },
    "source": [
-    "# Similarity Calcualtion"
+    "# Similarity Calculation"
    ]
   },
   {
@@ -129,6 +131,7 @@
    },
    "outputs": [],
    "source": [
+    "# Calculate TF-IDF similarity\n",
     "def calculate_tfidf_similarity(inputtext):\n",
     "  if isinstance(inputtext,str):\n",
     "    inputtext = [inputtext]\n",
@@ -165,6 +168,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load a single CV from a PDF file\n",
     "def load_single_cv(filepath):\n",
     "  cv = \"\"\n",
     "  reader = PdfReader(filepath)\n",
@@ -194,6 +198,7 @@
    },
    "outputs": [],
    "source": [
+    "# Predict similarity between query and job embeddings\n",
     "def predict_similarity(query, model,embeddings,TFIDF=False,topn=20):\n",
     "\n",
     "  # uses the provided model to create a sentence embedding\n",
@@ -251,6 +256,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load the pre-trained model\n",
     "modelpath = \"../00_data/SBERT_Models/models/gbert_batch32_woTSDAE_2e-05_f10/\"\n",
     "model = SentenceTransformer(modelpath)\n",
     "embeddings = load_pickle(f\"{modelpath}/embeddings.pkl\")"
@@ -262,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check embeddings keys\n",
     "embeddings.keys()"
    ]
   },
@@ -283,6 +290,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load a CV for testing\n",
     "path_to_cv = f\"../00_data/CVs/CV_1.pdf\"\n",
     "cv = load_single_cv(path_to_cv)"
    ]
@@ -310,6 +318,7 @@
    },
    "outputs": [],
    "source": [
+    "# Predict similarity for the loaded CV\n",
     "predict_similarity(cv,model,embeddings,TFIDF = True)"
    ]
   },
@@ -340,6 +349,7 @@
    },
    "outputs": [],
    "source": [
+    "# Define models and evaluation path\n",
     "modellist = [\n",
     "             \"jobgbert_batch32_woTSDAE_2e-05_f10\",\n",
     "             \"gbert_batch32_woTSDAE_2e-05_f10\"\n",
@@ -363,6 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load pickle file\n",
     "def load_pickle(filepath):\n",
     "    with open(filepath, \"rb\") as fIn:\n",
     "        stored_data = pickle.load(fIn)\n",
@@ -375,6 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import joblib\n",
     "import joblib"
    ]
   },
@@ -400,6 +412,7 @@
    },
    "outputs": [],
    "source": [
+    "# Evaluate CVs and save predictions\n",
     "for i in range(1,6):\n",
     "  #opening cvs\n",
     "  print(f\"Evaluating CV {i}\")\n",
@@ -426,6 +439,70 @@
     "        v.to_excel(writer, sheet_name=k)\n",
     "      pd.Series(list(set(pd.concat(results.values())[\"jobtitle\"])),name=\"jobtitle\").to_excel(writer,sheet_name=\"concat\")\n",
     "      pd.Series(model_dict).to_excel(writer,sheet_name=\"model_lookup\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CV data\n",
+    "cvs = pd.DataFrame(load_json(\"../00_data/CVs/cv_data.json\"))\n",
+    "cvs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode CVs using the model\n",
+    "cv_embeddings = model.encode(cvs[\"text\"].tolist(), show_progress_bar=True)\n",
+    "cvs[\"embeddings\"] = cv_embeddings.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Match CVs with Job Centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load job centroids\n",
+    "job_centroids = pd.DataFrame(load_json(\"../00_data/SBERT_Models/job_centroids.json\"))\n",
+    "job_centroids.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate cosine similarity between CVs and job centroids\n",
+    "similarities = cosine_similarity(\n",
+    "    np.array(cvs[\"embeddings\"].tolist()),\n",
+    "    np.array(job_centroids[\"embeddings\"].tolist())\n",
+    ")\n",
+    "cvs[\"job_matches\"] = [list(sim) for sim in similarities]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the results\n",
+    "write_pickle(\"../00_data/Results/cv_job_matches.pkl\", cvs)"
    ]
   }
  ],
