--- a/D - Preparation SBERT Model Training/9_DataExploration.ipynb
+++ b/D - Preparation SBERT Model Training/9_DataExploration.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from _util import *\n",
+    "import sys \n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from _utils import load_json, flatten_list, sort_dict\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
@@ -836,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
@@ -850,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
