--- a/E - SBERT Model Training/12_GC_GBERT - MultipleNegativesRanking.ipynb
+++ b/E - SBERT Model Training/12_GC_GBERT - MultipleNegativesRanking.ipynb
@@ -12,40 +12,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 36651,
-     "status": "ok",
-     "timestamp": 1681799362334,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "-aOtwdg3jehe",
-    "outputId": "81c4bc97-b0a0-486f-8701-ac6927b84b01"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
-    "# %cd /content/drive/MyDrive/TRAINING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "y4zyVrZvV-2I"
-   },
-   "outputs": [],
-   "source": [
-    "# %%capture\n",
-    "# !pip install sentence_transformers"
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from _utils import flatten_list, load_json,write_json"
    ]
   },
   {
@@ -67,49 +39,13 @@
     "from collections import Counter\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from helpers import *\n",
+    "from training_helpers import load_data_pairs, create_trainig_samples, encode_jobs\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
     "from sklearn.model_selection import KFold\n",
     "from transformers import set_seed\n",
     "import accelerate\n",
     "set_seed(42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "722fJkSlB-VR"
-   },
-   "outputs": [],
-   "source": [
-    "def create_trainig_samples(pos_dev_samples,neg_pairs):\n",
-    "  dev_set_total =[]\n",
-    "  anchors = set([x[0] for x in pos_dev_samples])\n",
-    "  neg_dev_samples = [x for x in neg_pairs if x[0] in anchors]\n",
-    "  print(\"Creating Devset\")\n",
-    "  for anchor in tqdm(anchors):\n",
-    "    pos_pairs_filtered = [x[1] for x in pos_dev_samples if x[0]==anchor]\n",
-    "    neg_pairs_filtered = [x[1] for x in neg_dev_samples if x[0]==anchor]\n",
-    "    dev_set_total.append({\"query\":anchor,\"positive\":pos_pairs_filtered,\"negative\":neg_pairs_filtered})\n",
-    "  return dev_set_total"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dict = load_data_pairs()\n",
-    "pos_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
-    "neg_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
    ]
   },
   {
@@ -124,71 +60,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "3pcrar0nWJqC"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "modelname = \"../00_data/SBERT_Models/models/gbert_TSDAE_epochs5\"\n",
-    "# modelname = \"deepset/gbert\""
+    "data_dict = load_data_pairs()\n",
+    "positive_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
+    "negative_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Training Parameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "QEF97EZFt6LY"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = SentenceTransformer(modelname)"
+    "model_name = \"../00_data/SBERT_Models/models/gbert_TSDAE_epochs5\"\n",
+    "model = SentenceTransformer(model_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "rNJLBve_WiNK"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "if modelname == \"deepset/gbert\":\n",
+    "if model_name == \"deepset/gbert\":\n",
     "  TSDAE = \"woTSDAE\"\n",
-    "elif modelname == \"../00_data/SBERT_Models/models/gbert_TSDAE_epochs5\":\n",
+    "elif model_name == \"../00_data/SBERT_Models/models/gbert_TSDAE_epochs5\":\n",
     "  TSDAE = \"wTSDAE\"\n",
     "else:\n",
-    "  raise TypeError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "executionInfo": {
-     "elapsed": 18,
-     "status": "ok",
-     "timestamp": 1681799404027,
-     "user": {
-      "displayName": "Lukas Wolfrum",
-      "userId": "10737638498661133063"
-     },
-     "user_tz": -120
-    },
-    "id": "c5g4imwtpy2z",
-    "outputId": "0fa97fe8-055b-462c-f42f-f7f39439dbb0"
-   },
-   "outputs": [],
-   "source": [
+    "  raise TypeError\n",
+    "\n",
     "batch_size = 16\n",
     "lr = 2e-5\n",
     "num_epochs = 1\n",
     "fold_size = 10\n",
     "output_path = f\"../00_data/SBERT_Models/models/gbert_batch{batch_size}_{TSDAE}_{lr}_f{fold_size}\"\n",
     "output_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Fold Cross-Validation"
    ]
   },
   {
@@ -205,84 +127,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Ux1alEzQBIY4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "MRR = []\n",
-    "MRR_AT = 100\n",
-    "training_start = \"\".join([c for c in str(datetime.now()).split('.')[0] if c.isdigit()])\n",
-    "max_MRR = 0\n",
+    "# Perform training and evaluation for each fold\n",
+    "for epoch, (train_index, dev_index) in enumerate(kf.split(positive_pairs)):\n",
+    "    # Split data into training and development sets\n",
+    "    pos_train_samples = [positive_pairs[i] for i in train_index]\n",
+    "    pos_dev_samples = [positive_pairs[i] for i in dev_index]\n",
+    "    warmup_steps = len(pos_train_samples) * 0.1\n",
     "\n",
-    "for epoch, (train_index, dev_index) in enumerate(kf.split(pos_pairs)):\n",
+    "    # Create training examples\n",
+    "    train_examples = [InputExample(texts=[item[0], item[1]]) for item in pos_train_samples]\n",
+    "    train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=batch_size)\n",
+    "    train_loss = losses.MultipleNegativesRankingLoss(SentenceTransformer(model_name))\n",
     "\n",
-    "  pos_train_samples = [pos_pairs[i] for i in train_index]\n",
-    "  pos_dev_samples = [pos_pairs[i] for i in dev_index]\n",
-    "  warmup = len(pos_train_samples)*0.1\n",
-    " \n",
-    "  dev_set_total = create_trainig_samples(pos_dev_samples,neg_pairs)\n",
-    "  train_examples = []\n",
-    "  for item in pos_train_samples:\n",
-    "    train_examples.append(InputExample(texts=[item[0], item[1]]))\n",
-    "  train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=batch_size)\n",
-    "  train_loss = losses.MultipleNegativesRankingLoss(model)\n",
-    "  evaluator = evaluation.RerankingEvaluator(dev_set_total,at_k=100,show_progress_bar=True)\n",
-    "  # train the model \n",
-    "  \n",
-    "  model.fit(train_objectives=[(train_dataloader, train_loss)],\n",
-    "    epochs=num_epochs,\n",
-    "    warmup_steps=warmup,\n",
-    "    evaluator=evaluator,\n",
-    "    checkpoint_path=\"00_data/SBERT_models/modeltrain\",\n",
-    "    checkpoint_save_total_limit=1,\n",
-    "    #save_best_model = True,\n",
-    "    optimizer_params={'lr':lr},\n",
-    "    checkpoint_save_steps = 1000,\n",
-    "    output_path= output_path,\n",
-    "  )\n",
-    "  # load the test ads and encode them with the current model\n",
-    "  testads = pd.DataFrame(load_json(\"../00_data/EURES/eures_testads_final_short.json\"))\n",
-    "  encodings_short = model.encode(list(testads[\"short_texts\"]), show_progress_bar=True)\n",
-    "  testads[\"embeddings_short\"] = encodings_short.tolist()\n",
-    "  embeddings = encode_jobs(model)\n",
+    "    # Define evaluator\n",
+    "    evaluator = evaluation.RerankingEvaluator(pos_dev_samples, at_k=100, show_progress_bar=True)\n",
     "\n",
-    "  # make evaluation\n",
-    "  similarities = {}\n",
-    "  for k in embeddings:\n",
-    "    similarities[k] = (util.cos_sim(testads[\"embeddings_short\"],embeddings[k][\"embeddings\"]))\n",
-    "  for k in similarities.keys():\n",
-    "    ranks = []\n",
-    "    missing = 0\n",
-    "    simdf = pd.DataFrame(similarities[k],columns=embeddings[k][\"esco_id\"], index=testads[\"esco_id\"])\n",
-    "    for i in tqdm(range(len(simdf))):\n",
-    "      id = simdf.iloc[i].name\n",
-    "      series = simdf.iloc[i].sort_values(ascending=False).reset_index()\n",
-    "      #print(series)\n",
-    "      rank = (series[series[\"index\"]==id].index.item()+1)\n",
-    "      #print(rank)\n",
-    "      if rank > MRR_AT:\n",
-    "        missing +=1\n",
-    "        ranks.append(0)\n",
-    "      else:\n",
-    "        ranks.append(1/rank)\n",
-    "    missing = missing/len(simdf)\n",
-    "    current_run = {\"model\":output_path.split(\"/\")[-1],\"epoch\":epoch,\n",
-    "                   \"embedding_kind\":k, \"MRR\":np.mean(ranks),\n",
-    "                   \"missing\":missing, \"MRR@\":MRR_AT,\n",
-    "                   \"training_details\":[training_start, batch_size, lr, warmup, num_epochs, fold_size, TSDAE]}\n",
-    "    MRR.append(current_run)\n",
-    "    df = pd.DataFrame(MRR)\n",
-    "    display(df)\n",
-    "    # safe model separately, if new model has higher MRR than best model before \n",
-    "    if np.mean(ranks) > max_MRR:\n",
-    "      print(f\"New best Model saved after epoch {epoch}\")\n",
-    "      max_MRR = np.mean(ranks)\n",
-    "      best_model_to_save = model\n",
-    "      best_model_to_save.save(f\"{output_path}_best\")\n",
-    "      write_json(f\"{output_path}/model_info.json\",current_run)\n",
-    "    df.to_excel(f\"{output_path}/eval/{training_start}_trainig_details.xlsx\")\n",
-    "best_model_to_save.save(f\"{output_path}\")"
+    "    # Train the model\n",
+    "    SentenceTransformer(model_name).fit(\n",
+    "        train_objectives=[(train_dataloader, train_loss)],\n",
+    "        epochs=num_epochs,\n",
+    "        warmup_steps=warmup_steps,\n",
+    "        evaluator=evaluator,\n",
+    "        output_path=output_path\n",
+    "    )"
    ]
   }
  ],
